v0.2.0 add todo
